--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,6 +1,7 @@
 .Wrapper {
   margin-bottom: 2rem;
 }
+
 .ViewContainer {
   list-style: none;
   -ms-box-orient: horizontal;
@@ -21,6 +22,7 @@
   font-size: 14px;
   text-align: center;
 }
+
 .Switch {
   margin: 4px 15px;
   font-size: 14px;
@@ -29,6 +31,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .Switch_Toggle {
   position: relative;
   display: inline-block;
@@ -67,16 +70,21 @@
   transition: 0.4s;
 }
 
-input:checked + .Slider {
+input:checked+.Slider {
   background-color: #2196f3;
 }
 
-input:focus + .Slider {
+input:focus+.Slider {
   box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked + .Slider:before {
+input:checked+.Slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+}
+
+
+polygon {
+  display: none;
 }
