--- a/src/components/grid/grid.module.css
+++ b/src/components/grid/grid.module.css
@@ -1,15 +1,15 @@
 .gridRow {
-  fill: #fff;
+  fill: rgba(11, 11, 11, 0.8);
 }
 
 .gridRow:nth-child(even) {
-  fill: #f5f5f5;
+  fill: rgba(11, 11, 11, 0.8);
 }
 
 .gridRowLine {
-  stroke: #ebeff2;
+  stroke: rgba(11, 11, 11, 0.8);
 }
 
 .gridTick {
-  stroke: #e6e4e4;
+  stroke: rgba(11, 11, 11, 0.8);
 }
