--- a/src/components/task-item/task-list.module.css
+++ b/src/components/task-item/task-list.module.css
@@ -1,6 +1,6 @@
 .barLabel {
   fill: #fff;
-  text-anchor: middle;
+  text-anchor: start;
   font-weight: lighter;
   dominant-baseline: central;
   -webkit-touch-callout: none;
