--- a/src/components/task-item/bar/bar.module.css
+++ b/src/components/task-item/bar/bar.module.css
@@ -1,6 +1,7 @@
 .barWrapper {
   cursor: pointer;
-  outline: none;
+  outline: 1px solid var(--colour-brand-tints-transparent-10, rgba(254, 254, 254, 0.1));
+  border-radius: 10px;
 }
 
 .barWrapper:hover .barHandle {
