--- a/src/components/task-item/project/project.module.css
+++ b/src/components/task-item/project/project.module.css
@@ -1,11 +1,11 @@
 .projectWrapper {
   cursor: pointer;
-  outline: none;
+  outline: 1px solid var(--colour-brand-tints-transparent-10, rgba(254, 254, 254, 0.1));
+  border-radius: 10px;
 }
 
 .projectBackground {
   user-select: none;
-  /* opacity: 0.6; */
 }
 
 .projectTop {
